# batch-tamarin

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENCE  MANIFEST.in  OUTPUTPROCESSOR_ARCHITECTURE.md  PACKAGING.md  README.md  RECIPE_GUIDE.md  REFACTOR_PLAN.md  TODO.md  example_config.json  flake.nix  main.py  pyproject.toml  requirements.txt  setup-hooks.sh  setup_treesitter.py  tamarin-config-schema.json
.github/ISSUE_TEMPLATE/: bug_report.md  missing-documentation.md
.github/workflows/: build-and-publish.yml  test-on-main.yml
examples/: CONFIG_DOCUMENTATION.md  README_json_recipe_documentation.md  complete.json  complete_from_init_cmd.json  complex.json  custom_from_init.json  docker.json  docker_complete.json  errors.json  example_config.json  example_config_unimplemented.json  long.json  minimal.json  minimal2.json  output_manager_example.py  test_preprecessor.json  wpa2.json
examples/__dockerfiles__/: local-tamarin.Dockerfile
examples/__dockerfiles__/tamarin-only/: tamarin-1.10.0.Dockerfile  tamarin-1.4.0-amd64.Dockerfile  tamarin-1.4.1.nix  tamarin-1.6.0-amd64.Dockerfile  tamarin-1.6.1.Dockerfile  tamarin-1.6.1.nix  tamarin-1.8.0.Dockerfile  tamarin-1.8.0.nix  tamarin-develop.Dockerfile
examples/__dockerfiles__/with-batch-tamarin/: local-tamarin-and-batch.Dockerfile  tamarin-1.10-and-batch.Dockerfile  tamarin-1.10-and-batch.nix  tamarin-1.4.0-and-batch-amd64.Dockerfile  tamarin-1.4.0-and-batch.nix  tamarin-1.4.1-and-batch-amd64.Dockerfile  tamarin-1.4.1-and-batch.nix  tamarin-1.6.0-and-batch-amd64.Dockerfile  tamarin-1.6.0-and-batch.nix  tamarin-1.6.1-and-batch.Dockerfile  tamarin-1.6.1-and-batch.nix  tamarin-1.8.0-and-batch.Dockerfile  tamarin-1.8.0-and-batch.nix  tamarin-dev-and-batch.Dockerfile
examples/__protocols__/: Minimal_HashChain.spthy  SimpleChallengeResponse.spthy  errors.spthy
examples/complete/: complete_recipe.json
examples/complete/protocols/: MinimalInjectiveFact.spthy
examples/errors/: errors.json
examples/wpa2/: wpa2_recipe.json
examples/wpa2/protocols/: wpa2.spthy
scripts/: update_version.py
slides/: presentation.typ
src/: main.py  requirements.txt  runner.py
src/batch_tamarin/: __init__.py  main.py  runner.py
src/batch_tamarin/commands/: __init__.py  cache.py  check.py  init.py  report.py  run.py
src/batch_tamarin/dockerfiles/: tamarin-1.10.0.nix  tamarin-1.4.0.nix  tamarin-1.4.1-amd64.Dockerfile  tamarin-1.6.0.nix
src/batch_tamarin/model/: __init__.py  batch.py  command_builder.py  executable_task.py  report_data.py  tamarin_recipe.py
src/batch_tamarin/modules/: __init__.py  batch_manager.py  cache_manager.py  config_manager.py  docker_executor.py  docker_manager.py  lemma_parser.py  output_manager.py  process_manager.py  report_charts.py  report_data.py  report_generator.py  resource_manager.py  tamarin_test_cmd.py  task_manager.py
src/batch_tamarin/templates/: report.html.j2  report.md.j2  report.tex.j2  report.typ.j2  summary.html.j2
src/batch_tamarin/utils/: __init__.py  compatibility_filter.py  dot_utils.py  model_checking.py  notifications.py  system_resources.py
src/model/: executable_task.py  tamarin_path.py  tamarin_recipe.py  wrapper.py
src/modules/: config_manager.py  process_manager.py  resource_manager.py  tamarin_cmd.py  tamarin_detector.py  tamarin_test_cmd.py  task_manager.py
src/tamarin_wrapper/: __init__.py  main.py  requirements.txt  runner.py
src/tamarin_wrapper/model/: __init__.py  executable_task.py  output_models.py  tamarin_recipe.py
src/tamarin_wrapper/modules/: __init__.py  config_manager.py  output_manager.py  output_processor.py  process_manager.py  resource_manager.py  tamarin_test_cmd.py  task_manager.py
src/tamarin_wrapper/modules/analyzers/: __init__.py  error_analyzer.py  lemma_analyzer.py  proof_analyzer.py
src/tamarin_wrapper/modules/generators/: __init__.py  failed_generator.py  processed_generator.py
src/tamarin_wrapper/modules/parsers/: __init__.py  spthy_parser.py  stderr_parser.py  stdout_parser.py
src/tamarin_wrapper/setup/: __init__.py  tree_sitter.py
src/tamarin_wrapper/utils/: __init__.py  notifications.py  system_resources.py
src/tui/: __init__.py  config.py  styles.css  tamarin_path_selector.py
src/ui/panels/: tamarin_path_manager.py
src/ui/panels/style/: tamarin_path_manager.css
src/ui/widgets/: add_tamarin_path.py  current_tamarin_path.py  tamarin_path_card.py
src/ui/widgets/style/: add_tamarin_path.css  current_tamarin_path.css  tamarin_path_card.css
src/utils/: notifications.py
tests/: __init__.py  conftest.py  test_batch_manager.py  test_batch_model.py  test_cache_command.py  test_cache_manager.py  test_command_builder.py  test_config_manager.py  test_docker_executor.py  test_docker_integration.py  test_init_command.py  test_integration.py  test_lemma_parser.py  test_output_manager.py  test_report_data.py  test_report_generator.py  test_resource_manager.py  test_run_command.py  test_signal_handling.py  test_task_manager.py  test_task_runner.py  test_utils.py
tests/fixtures/complete-example-results/: complete-rerun.json  execution_report.json  summary.html
tests/fixtures/complete-example-results/failed/: shouldFail--Client_auth_injective--stable.json  shouldMemoryLimit--authenticator_rcv_m2_must_be_preceded_by_snd_m1--stable.json  shouldTimeout--authenticator_rcv_m2_must_be_preceded_by_snd_m1--stable.json
tests/fixtures/complete-example-results/proofs/: basic_KEYWORD1--Client_auth_injective--stable.spthy  basic_KEYWORD1--Client_session_key_setup--stable.spthy  basic_KEYWORD2--Client_auth_injective--stable.spthy  basic_KEYWORD2--Client_session_key_setup--stable.spthy  basic_KEYWORD2--Client_session_key_setup_stronger--stable.spthy  minHashChain--Auxiliary_Success_chain--legacy.spthy  minHashChain--Auxiliary_Success_chain--stable.spthy  minHashChain--Success_chain--dev.spthy  minHashChain--Success_chain--legacy.spthy  minHashChain--Success_chain--stable.spthy  minHashChainSuccessLemma--Auxiliary_Success_chain--dev.spthy  minInjection--injectivity--dev.spthy
(+19 files in other folders)
