[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamarin-wrapper"
version = "0.1.12"
description = "Python wrapper for Tamarin Prover with JSON configuration"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Luca Mandrelli", email = "luca.mandrelli@icloud.com"}
]
keywords = ["tamarin", "prover", "security", "protocol", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.11.0",
    "psutil>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "autoflake>=2.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "build>=1.0.0",
    "twine>=4.0.0",
    "setuptools>=61.0",
    "wheel>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tamarin-wrapper"
Repository = "https://github.com/yourusername/tamarin-wrapper"
Documentation = "https://github.com/yourusername/tamarin-wrapper#readme"
"Bug Tracker" = "https://github.com/yourusername/tamarin-wrapper/issues"

[project.scripts]
tamarin-wrapper = "tamarin_wrapper.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tamarin_wrapper = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
expand-star-imports = true
