[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-tamarin"
version = "1.1.1"
description = "Python wrapper for Tamarin Prover with JSON configuration"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Luca Mandrelli", email = "luca.mandrelli@icloud.com"}
]
keywords = ["tamarin", "prover", "security", "protocol", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.11.0",
    "psutil>=7.0.0",
    "tree-sitter>=0.22.0",
    "py-tree-sitter-spthy>=1.2.2",
    "diskcache>=5.6.0",
    "jinja2>=3.1.0",
    "graphviz>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "build>=1.0.0",
    "twine>=6.0.0",
    "setuptools>=80.0",
    "wheel>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/tamarin-prover/batch-tamarin"
Repository = "https://github.com/tamarin-prover/batch-tamarin"
Documentation = "https://github.com/tamarin-prover/batch-tamarin#readme"
"Bug Tracker" = "https://github.com/tamarin-prover/batch-tamarin/issues"

[project.scripts]
batch-tamarin = "batch_tamarin.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
batch_tamarin = ["*.json", "templates/*.j2"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "PL"]
ignore = [
    "E501",        # line too long
    "PLR0911",     # too many return statements
    "PLR0912",     # too many branches
    "PLR0913",     # too many arguments
    "PLR0915",     # too many statements
    "PLR2004",     # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["batch_tamarin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
